--- a/apps/web/src/assets/main.css
+++ b/apps/web/src/assets/main.css
@@ -1,7 +1,7 @@
 @import 'tailwindcss';
 
 /* 让tailwindcss 识别@shadow/ui 的样式 */
-@source "../../node_modules/@shadow/ui/dist/index.js";
+@source "../../../../packages/ui/src/**/*.{js,ts,vue}";
 
 :root {
   /* Light mode colors */
